fix ci/cd