@@ -4,6 +4,5 @@
 --add-opens java.base/java.nio=ALL-UNNAMED
 --add-opens java.base/sun.nio.ch=ALL-UNNAMED
 --enable-native-access=ALL-UNNAMED
---sun-misc-unsafe-memory-access=allow
 -XX:+EnableDynamicAgentLoading
 -Xshare:off
